--- a/ensemble_ad/AnoGAN/modeling.ipynb
+++ b/ensemble_ad/AnoGAN/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "51a3e442-5e7f-40ef-91f0-6dd7c0dd71ca",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "2562e43b-1730-4fee-9563-f8b90df4be3b",
    "metadata": {},
    "outputs": [
@@ -209,12 +209,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "54b051a1-9948-4f88-8f31-809b7dae9f20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AnoGAN(\n",
+       "  (loss): BCELoss()\n",
+       "  (G): Generator(\n",
+       "    (layer_0): Sequential(\n",
+       "      (0): ConvTranspose2d(100, 1024, kernel_size=(4, 4), stride=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "    )\n",
+       "    (layer_1): Sequential(\n",
+       "      (0): ConvTranspose2d(1024, 512, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "    )\n",
+       "    (layer_2): Sequential(\n",
+       "      (0): ConvTranspose2d(512, 256, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "    )\n",
+       "    (layer_3): Sequential(\n",
+       "      (0): ConvTranspose2d(256, 128, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "    )\n",
+       "    (layer_4): Sequential(\n",
+       "      (0): ConvTranspose2d(128, 64, kernel_size=(4, 4), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): ReLU()\n",
+       "    )\n",
+       "    (layer_5): Sequential(\n",
+       "      (0): ConvTranspose2d(64, 3, kernel_size=(2, 2), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "    )\n",
+       "    (tanh): Tanh()\n",
+       "  )\n",
+       "  (D): Discriminator(\n",
+       "    (layer_0): Sequential(\n",
+       "      (0): Conv2d(3, 32, kernel_size=(2, 2), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (1): LeakyReLU(negative_slope=0.2)\n",
+       "    )\n",
+       "    (layer_1): Sequential(\n",
+       "      (0): Conv2d(32, 64, kernel_size=(4, 4), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): LeakyReLU(negative_slope=0.2)\n",
+       "    )\n",
+       "    (layer_2): Sequential(\n",
+       "      (0): Conv2d(64, 128, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): LeakyReLU(negative_slope=0.2)\n",
+       "    )\n",
+       "    (layer_3): Sequential(\n",
+       "      (0): Conv2d(128, 256, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): LeakyReLU(negative_slope=0.2)\n",
+       "    )\n",
+       "    (layer_4): Sequential(\n",
+       "      (0): Conv2d(256, 512, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): LeakyReLU(negative_slope=0.2)\n",
+       "    )\n",
+       "    (layer_5): Sequential(\n",
+       "      (0): Conv2d(512, 1024, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (1): BatchNorm2d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (2): LeakyReLU(negative_slope=0.2)\n",
+       "    )\n",
+       "    (fully_connected): Sequential(\n",
+       "      (0): Conv2d(1024, 1, kernel_size=(4, 4), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (1): Sigmoid()\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "torch.concat((input1, input2, input3), dim = 1)"
+    "torch.load(\"C:\\\\Users\\\\galli\\\\Documents\\\\GitHub\\\\cs7643_final_project\\\\ensemble_ad\\\\AnoGAN\\\\AnoGAN_model_0.pt\")"
    ]
   }
  ],
